RESOLVED FIXED163378
Web Inspector: Stepping highlight for dot/bracket expressions in if statements highlights subset of the expression
https://bugs.webkit.org/show_bug.cgi?id=163378
Summary Web Inspector: Stepping highlight for dot/bracket expressions in if statement...
Joseph Pecoraro
Reported 2016-10-12 21:53:25 PDT
Summary: Stepping highlight for dot/bracket expressions in if statements highlights subset of the expression Test: <script> var obj = {condition: true}; debugger; if (obj.condition) true; if (obj["condition"]) true; </script> Steps to Reproduce: 1. Inspect test page 2. Reload to pause at debugger statement 3. Step through => Weird highlights Notes: - Currently we are getting pause locations that look like: if (obj|.condition) if (obj|["condition"]) But what I would expect is: if (|obj.condition) if (|obj["condition"]) It seems the DotAccessNode and BracketAccessNode we create in these cases points to the location of the dot/bracket.
Attachments
[PATCH] Proposed Fix (15.97 KB, patch)
2016-10-12 21:58 PDT, Joseph Pecoraro
no flags
Radar WebKit Bug Importer
Comment 1 2016-10-12 21:53:53 PDT
Joseph Pecoraro
Comment 2 2016-10-12 21:58:43 PDT
Created attachment 291454 [details] [PATCH] Proposed Fix I ran a pretty heavy load of js tests and changing these Node's location didn't fail anything. In any case this gets us the better position for breakpoints / stepping.
Saam Barati
Comment 3 2016-10-13 15:00:21 PDT
Comment on attachment 291454 [details] [PATCH] Proposed Fix r=me
WebKit Commit Bot
Comment 4 2016-10-13 15:23:00 PDT
Comment on attachment 291454 [details] [PATCH] Proposed Fix Clearing flags on attachment: 291454 Committed r207312: <http://trac.webkit.org/changeset/207312>
WebKit Commit Bot
Comment 5 2016-10-13 15:23:04 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.