Web Inspector: Stepping highlight for dot/bracket expressions in if statements highlights subset of the expression https://bugs.webkit.org/show_bug.cgi?id=163378 <rdar://problem/28749376>

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2016-10-13
Reviewed by Saam Barati.

Source/JavaScriptCore:

* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseAssignmentExpression):
Since each expression builds on the previous, always keep the starting
location the first location.

LayoutTests:

* inspector/debugger/breakpoints/resolved-dump-all-pause-locations-expected.txt:
* inspector/debugger/breakpoints/resolved-dump-each-line-expected.txt:
* inspector/debugger/breakpoints/resources/dump-general.js:
* inspector/debugger/stepping/stepping-misc-expected.txt:
* inspector/debugger/stepping/stepping-misc.html:
Add tests for these kinds of special cases.

Canonical link: https://commits.webkit.org/181232@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207312 268f45cc-cd09-0410-ab3c-d52691b4dbfc